--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -131,6 +131,12 @@
   /* background-color: lightgreen; */
 }
 
+.autocomplete-richlistitem[type="cliqz-weather"] {
+    -moz-binding: url("chrome://cliqz/content/components.xml?v=2#autocomplete-richlistitem-cliqz-weather");
+    background-color: #f9f9f9;
+}
+
+
 /* general autocomplete item styles */
 .ac-title-box {
   height: 20px;
@@ -553,6 +559,110 @@
 .cliqz-footer {
   background: url(chrome://cliqzres/content/skin/drag_icon.png) no-repeat 50% 50%;
   background-size: 20px 14px;
+}
+
+/* weather */
+.cliqz-weather-city-container {
+  padding-top: 10px;
+  margin-right: 20px;
+}
+
+.cliqz-weather-city {
+  background-color: grey;
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+  padding: 5px;
+  width: 100px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.cliqz-weather-status {
+  color: grey;
+  padding: 5px;
+}
+
+.cliqz-weather-today-container {
+
+}
+
+.cliqz-weather-skew-container {
+  transform: skew(-30deg);
+  background-color:azure;
+  margin-right:10px;
+  padding: 0px 20px;
+}
+
+
+.cliqz-weather-credits {
+  font-size: 9px;
+  color: lightgrey;
+  text-align:right
+}
+
+.cliqz-weather-today-date {
+  font-size: 11px;
+  padding: 2px;
+  color: grey;
+}
+
+.cliqz-weather-today-temp {
+  font-size: 32px;
+  padding-top: 5px;
+  width: 10px;
+  color: black;
+}
+
+.cliqz-weather-today-min {
+  font-size: 11px;
+  color: blue;
+  padding: 2px;
+}
+
+.cliqz-weather-today-max {
+  font-size: 11px;
+  color: red;
+  padding: 2px;
+}
+
+.cliqz-weather-today-icon {
+  height: 50px;
+}
+
+.cliqz-weather-next-icon {
+  height: 50px;
+  margin: 0px 10px;
+}
+
+.cliqz-weather-next-container {
+  padding: 5px;
+  margin: 0px 10px;
+}
+
+.cliqz-weather-next-day {
+  color: black;
+  font-size: 14px;
+}
+
+.cliqz-weather-next-date {
+  color: grey;
+  font-size: 13px;
+}
+
+.cliqz-weather-next-max {
+  font-size: 12px;
+  color: red;
+}
+
+.cliqz-weather-next-min {
+  font-size: 12px;
+  color: blue;
+}
+
+.cliqz-weather-next-desc {
+  color: lightgrey;
 }
 
 /* misc */
