--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -555,6 +555,95 @@
   background-size: 20px 14px;
 }
 
+/* world cup */
+
+.richlistitem-cliqz-worldcup {
+  display: none;
+}
+
+.autocomplete-richlistitem[type="cliqz-worldcup"] .richlistitem-cliqz-generic {
+  display: none;
+}
+
+.autocomplete-richlistitem[type="cliqz-worldcup"] .richlistitem-cliqz-worldcup {
+  -moz-binding: url("chrome://cliqz/content/components.xml?v=0.4.14#autocomplete-richlistitem-cliqz-worldcup");
+  display: inherit;
+}
+
+.cliqz-weather-title-container {
+  padding-top: 10px;
+  margin-right: 20px;
+}
+
+.cliqz-worldcup-title {
+  background-color: grey;
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+  padding: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.cliqz-worldcup-status {
+  color: grey;
+  padding: 5px;
+}
+
+.cliqz-worldcup-today-matches {
+  margin: 5px;
+}
+
+.cliqz-worldcup-match {
+  margin: 0 15px;
+}
+
+.cliqz-worldcup-team-container {
+  -moz-box-align:center;
+}
+
+.cliqz-worldcup-flag {
+  width: 20px;
+  margin: 5px;
+}
+
+.cliqz-worldcup-team {
+  color: #000000;
+  font-size: 20px;
+  margin-top: 5px;
+}
+
+.cliqz-worldcup-goals-container {
+  padding: 0 10px;
+  height: 20px;
+}
+
+.cliqz-worldcup-goals {
+  font-size: 20px;
+  color: #5191C9;
+  margin-top: 5px;
+}
+
+.cliqz-worldcup-match-time {
+  color: #000000;
+  margin-top: 26px;
+}
+
+.cliqz-worldcup-match-live {
+  margin-top: 20px;
+  font-size: 20px;
+  padding-left: 5px;
+}
+
+.cliqz-worldcup-green-dot {
+  color: #61CC2F;
+}
+
+.cliqz-worldcup-grey-dot {
+  color: #DBDBDB;
+}
+
 /* weather */
 
 .richlistitem-cliqz-weather {
