--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -82,7 +82,6 @@
   margin-left: 12px;
   background-position: center;
 
-  border-bottom-left-radius: 5px;
 }
 
 .cliqz-image {
@@ -567,16 +566,16 @@
 }
 
 /* news */
-.autocomplete-richlistitem[type="cliqz-results sources-n"] .richlistitem-cliqz-generic {
+.autocomplete-richlistitem[type^="cliqz-results sources-n"] .richlistitem-cliqz-generic {
   display: none;
 }
 
-.autocomplete-richlistitem[type="cliqz-results sources-n"] .richlistitem-cliqz-custom {
+.autocomplete-richlistitem[type^="cliqz-results sources-n"] .richlistitem-cliqz-custom {
   -moz-binding: url("chrome://cliqz/content/components.xml?v=0.4.15#autocomplete-richlistitem-cliqz-news");
   display: inherit;
 }
 
-.autocomplete-richlistitem[type="cliqz-results sources-n"] {
+.autocomplete-richlistitem[type^="cliqz-results sources-n"] {
   padding-bottom: 0px;
 }
 
@@ -591,7 +590,7 @@
 }
 
 .cliqz-news-sources {
-  background: #fddddd;
+  background: #f3f3f3;
   padding-left: 35px;
   margin-top: 4px;
 }
