--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -43,7 +43,6 @@
   background-color: green;
 }
 */
-
 .cliqz-no-margin-padding {
   margin: 0px;
   padding: 0px;
@@ -64,13 +63,17 @@
   height: 24px;
 }
 
+.cliqz-left-spacer {
+  margin-left: 7px;
+}
+
 .cliqz-separator-10 {
   width: 10px;
 }
 
-.cliqz-url-box {
+.cliqz-generic-box {
   margin: 0px;
-  padding: 2px 0 0 6px;
+  padding: 0 0 0 6px;
 }
 
 .cliqz-image-box {
@@ -81,7 +84,6 @@
   height: 54px; /* 9 */
   margin-left: 12px;
   background-position: center;
-
 }
 
 .cliqz-image {
@@ -620,15 +622,49 @@
 
 /* shopping */
 
-.autocomplete-richlistitem[type="cliqz-results sources-s"] .richlistitem-cliqz-generic {
+.autocomplete-richlistitem[type^="cliqz-results sources-s"] .richlistitem-cliqz-generic {
   display: none;
 }
 
-.autocomplete-richlistitem[type="cliqz-results sources-s"] .richlistitem-cliqz-custom {
+.autocomplete-richlistitem[type^="cliqz-results sources-s"] .richlistitem-cliqz-custom {
   -moz-binding: url("chrome://cliqz/content/components.xml?v=0.4.16#autocomplete-richlistitem-cliqz-shopping");
   display: inherit;
 }
 
+.cliqz-shopping-price {
+  font-size: 9pt;
+  font-weight: bold;
+  color: #990033;
+}
+
+.cliqz-shopping-reviews {
+  color: #cccccc;
+}
+
+.cliqz-shopping-image {
+  background-color: white;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 64px;
+  height: 64px;
+  border: 1px solid #e6e6e6;
+  margin-left: 12px;
+}
+
+.cliqz-shopping-title-box {
+  padding-top: 6px;
+  color: black;
+}
+
+.cliqz-shopping-title {
+  font-size: 9pt;
+  font-weight: bold;
+}
+
+.cliqz-shopping-description {
+  color: #333333;
+}
 /* end shopping */
 
 /* world cup */
@@ -857,3 +893,22 @@
   visibility: hidden;
   display: none !important;
 }
+
+.cliqz-stars-element {
+  padding-top: 3px;
+  font-size: 8pt;
+  -moz-binding: url("chrome://cliqz/content/components.xml?v=0.4.16#cliqz-stars");
+}
+
+.cliqz-stars-box, .cliqz-stars {
+  display: block;
+  background: url(chrome://cliqzres/content/skin/stars.png) 0 -14px repeat-x;
+  width: 70px;
+  height: 14px;
+}
+
+.cliqz-stars-box .cliqz-stars {
+  background-position: 0 0;
+}
+
+
