force the opening of the dropdown if there is a custom cliqzResults URL

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -163,6 +163,10 @@
   display: none;
 }
 
+.autocomplete-richlistitem[type="cliqz-empty"] {
+    display: none;
+}
+
 .cliqz-ac-title-suggestion-desc {
   color: #999999;
   font-weight: 500;
