--- a/cliqz@cliqz.com/chrome/content/templates/test.html
+++ b/cliqz@cliqz.com/chrome/content/templates/test.html
@@ -58,7 +58,7 @@ function openUILink(url){
 }
 
 document.addEventListener('keydown', CLIQZ.UI.keyDown);
-
+a= cont;
 $(function(){
     setTimeout(function(r, s){
         r.width=(document.body.offsetWidth - 95) + 'px'
@@ -66,6 +66,7 @@ $(function(){
         CLIQZ.UI.suggestions(s);
     }, 1000, RESULTS, SUGGESTIONS);
 });
+
 
 
 </script>
