--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -8,6 +8,8 @@
     background-color: #dddddd;
     height: 20px;
     padding: 5px;
+    overflow: hidden;
+    line-height: 20px;
 }
 
 .cliqz-suggestion {
