--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -106,6 +106,25 @@
     text-align: center;
 }
 
+.cliqz-image {
+    position: relative;
+    margin-right: 10px;
+    width: 96px; /* 16 */
+    height: 54px; /* 9 */
+    background-size: cover;
+}
+
+.cliqz-image>p {
+    position: absolute;
+    right: 0px;
+    bottom: -12px;
+    background-color: rgba(0, 0, 0, 0.6);
+    font-weight: bold;
+    font-size: 9pt;
+    color: white;
+    padding: 2px 5px 2px 5px;
+}
+
 .cliqz-result-mid-box {
     overflow: hidden;
 }
@@ -177,7 +196,24 @@
     background-size: 36px 36px;
 }
 
+.cliqz-result-description {
+    max-height: 2.5em;
+}
+
 /* end results */
+
+.cliqz-urlbar-Last-search {
+  background: url(chrome://cliqzres/content/skin/rabbit_arrow.png) no-repeat 5px center;
+  background-size: 14px 10px;
+  color: white;
+  background-color: grey;
+  margin: 0px;
+  padding: 2px 6px 2px 24px;
+  border-radius: 1px;
+  max-width: 200px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
 
 /* misc */
 
